tests/NormalTests/paczka1/fuzzy1/53415146.err
Error in line 5: aIogj S487 45,8
Error in line 6: bdO0Div S814 25,1
Error in line 3: GASuP4irvMV S90 40,6
Error in line 14: 8ll59yv S90 73,9
Error in line 8: aIogj S663 57,4
Error in line 17: 8ll59yv S663 88,6
Error in line 22: aQ18PO S814 77,5
Error in line 23: 8ll59yv S487 43,9
Error in line 27: 8ll59yv S663 49,8
Error in line 25: aQ18PO S663 35,5
